# meshtastic-dashboard

./: .env.example  .gitignore  README.md  app.py  create_demo_data.py  database.py  gunicorn.conf.py  hardware_models.py  main.py  meshtastic-dashboard.service  meshtastic.db  nginx-example.conf  pyproject.toml  run_dashboard.py  setup-production.sh  start.sh  status.py  test_database.py  test_vis.html  wsgi.py
generated_protobufs/: __init__.py
generated_protobufs/meshtastic/: admin_pb2.py  atak_pb2.py  clientonly_pb2.py  config_pb2.py  device_ui_pb2.py  deviceonly_pb2.py  interdevice_pb2.py  mesh_pb2.py  module_config_pb2.py  mqtt_pb2.py  portnums_pb2.py  powermon_pb2.py  telemetry_pb2.py
static/css/: style.css
static/js/: dashboard.js  graph-view.js  map-view.js  stats.js  utils.js
templates/: index.html
